minor corrections to CV

--- a/public/teaching/msc_thesis/index.html
+++ b/public/teaching/msc_thesis/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: July 17, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: July 31, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -1192,7 +1192,7 @@
 
   <div class="hb-scrollbar text-sm [hyphens:auto] sticky top-16 overflow-y-auto pr-4 pt-6 max-h-[calc(100vh-var(--navbar-height)-env(safe-area-inset-bottom))] -mr-4 rtl:-ml-4"><p class="mb-4 font-semibold tracking-tight">On this page</p><ul>
       <li class="my-2 scroll-my-6 scroll-py-6">
-        <a class="pl-4 rtl:pr-4 inline-block text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-300 w-full break-words" href="#potential-topics">Potential topics</a>
+        <a class="pl-4 rtl:pr-4 inline-block text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-300 w-full break-words" href="#potential-future-topics">Potential future topics</a>
       </li>
       <li class="my-2 scroll-my-6 scroll-py-6">
         <a class="pl-4 rtl:pr-4 inline-block text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-300 w-full break-words" href="#current-and-past-theses">Current and past theses</a>
@@ -1233,7 +1233,7 @@
 
       <div class="content text-base">
         <h1>MSc theses</h1>
-        <h3 id="potential-topics">Potential topics</h3>
+        <h3 id="potential-future-topics">Potential future topics</h3>
 <p><strong>Artificial Intelligence related topics:</strong></p>
 <ol>
 <li>Reverse engineering and investigative approaches for LCA</li>
@@ -1256,54 +1256,22 @@
 <p>As 1st supervisor:</p>
 <ul>
 <li>
-<table>
-<thead>
-<tr>
-<th>PeDALI: A Pedigree matrix approach for data-driven Data quality Assessment for Life cycle Inventories (Floor Bagchus)</th>
-</tr>
-</thead>
-</table>
+<p>PeDALI: A Pedigree matrix approach for data-driven Data quality Assessment for Life cycle Inventories (Floor Bagchus)</p>
 </li>
 <li>
-<table>
-<thead>
-<tr>
-<th>Circular Economy Strategies for Metals: Assessing the Impact of Circularity Interventions on the Dutch Economy by 2050 (Reginold Jesuratnam)</th>
-</tr>
-</thead>
-</table>
+<p>Circular Economy Strategies for Metals: Assessing the Impact of Circularity Interventions on the Dutch Economy by 2050 (Reginold Jesuratnam)</p>
 </li>
 <li>
-<table>
-<thead>
-<tr>
-<th>The environmental impacts of current and future biofuel consumption by the Dutch maritime sector. (Kevin Heideman)</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>As 2nd/3rd supervisor</td>
-</tr>
-</tbody>
-</table>
+<p>The environmental impacts of current and future biofuel consumption by the Dutch maritime sector. (Kevin Heideman)</p>
+</li>
+</ul>
+<p>As 2nd/3rd supervisor</p>
+<ul>
+<li>
+<p>From Sewage to Coal: New insights in Char Production: Performance evaluation with a combined Process Simulation and ex-ante Life Cycle Assessment (Heiko Rossdeutscher)</p>
 </li>
 <li>
-<table>
-<thead>
-<tr>
-<th>From Sewage to Coal: New insights in Char Production: Performance evaluation with a combined Process Simulation and ex-ante Life Cycle Assessment (Heiko Rossdeutscher)</th>
-</tr>
-</thead>
-</table>
-</li>
-<li>
-<table>
-<thead>
-<tr>
-<th>Machine learning in ex-ante LCA: assessing enhancements of forecasting algorithms through systematic literature review and case studies (Nils Pauliks)</th>
-</tr>
-</thead>
-</table>
+<p>Machine learning in ex-ante LCA: assessing enhancements of forecasting algorithms through systematic literature review and case studies (Nils Pauliks)</p>
 </li>
 </ul>
 
